panel-admin part#18

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 
 body {
   font-family: "BYekan";
+  background-image: url("/public/images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .active{
